@@ -84,6 +84,7 @@ production.
 * (bug 30684) Fix bad escaping in mw.message for inexistent messages (i.e. <key>)
 * (bug 23057) Importers no longer can 'edit' or 'create' a fully-protected page by
   importing a new revision into it
+* (bug 30192) Thumbnails of archived files are now deleted
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
